--- a/DS_Questions/Data_Structures/Hash_Tables/README.adoc
+++ b/DS_Questions/Data_Structures/Hash_Tables/README.adoc
@@ -5,20 +5,9 @@
 * What is Hash Table
 * Internal implementation of Hash Table
 * Hash Collision
-  * Solutions: Open Addressing(Types: Linear/Sequential probing, Quadratic Probing, Double Hashing), Seperate Chaining
+** Solutions: Open Addressing(Types: Linear/Sequential probing, Quadratic Probing, Double Hashing), Seperate Chaining
 * Rehashing
 * Implementations(2-left hashing, d-left hashing)
+* link:https://code-with-amitk.github.io/Data_Structures/[Hash Table vs Self Balancing BT]
 
 === link:https://code-with-amitk.github.io/Data_Structures/[Direct Access Table(DAT)]
-
-== HT vs Self Balanced BT
-```c
-                                                         Hash-Tables            |        Self-Balancing BT
----------------------------------|----------------------------------------------|----------------------------------
-Complexity(Insert/Delete/Search) | O(1)[Average Time], O(n) during table resize | O(log n)[guaranteed all times].
-Collision                        | Yes                                          | never
-Implementation                   | Tough, We depend on libraries                | Easy, we can implement our own customized BST
-ADVANTAGES of Tree over HT       |                                              | 1. Data can be retrieved in sorted order. inorder-traversal: O(n)
-                                                                                | 2. lowest, biggest element finding: easy
-                                                                                | 3. No need to guess size of input data.
-```
